Adc imgens e icons

--- a/Estacionamento MVC/Views/Home/Index.cshtml
+++ b/Estacionamento MVC/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 id="titulo" class="display-4"><strong>Seja bem vindo ao EveryDay Car - Sistema para estacionamento de carros.</strong></h3>
+    <img id="car" src="~/img/car-race-geec41e643_1920.jpg" class="img-fluid" alt="...">
+    <h4 id="texto">Com o sistema de gerenciamento de estacionamento fica mais fácill para controlar seu dia dia no estabelecimento. </h4>
 </div>
