--- a/Estacionamento MVC/wwwroot/css/site.css
+++ b/Estacionamento MVC/wwwroot/css/site.css
@@ -2,9 +2,9 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
@@ -64,6 +64,18 @@ body {
   margin-bottom: 60px;
 }
 
+
+#titulo {
+    padding: 1em;
+}
+#car {
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px 5px rgb(23 23 23);
+}
+
+#texto{
+  padding: 1em;
+}
 
 .footer {
   position: absolute;
