--- a/Estacionamento MVC/Views/Propietarios/Index.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Index.cshtml
@@ -14,6 +14,12 @@
         </svg>
     </a>
 </p>
+<form asp-controller="Propietarios" asp-action="Index" method="get">
+    <p>
+        Cliente: <input type="text" name="SearchString" />
+        <input class="btn btn-success" type="submit" value="Procurar" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
