--- a/Estacionamento MVC/Views/Shared/_Layout.cshtml
+++ b/Estacionamento MVC/Views/Shared/_Layout.cshtml
@@ -40,9 +40,12 @@
             &copy; 2021 - EveryDay Car
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @RenderSection("ScriptCode", required: false)
+
 </body>
 </html>
