--- a/Estacionamento MVC/wwwroot/css/site.css
+++ b/Estacionamento MVC/wwwroot/css/site.css
@@ -77,6 +77,19 @@ body {
   padding: 1em;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+
+}
+::-webkit-scrollbar-track{
+    background-color: rgba(0, 0, 0, .05);
+    border-radius:10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color:#b4b4b4;
+    border-radius:10px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
