Adc validação cpf front e Calculo

--- a/Estacionamento MVC/Views/Shared/_Layout.cshtml
+++ b/Estacionamento MVC/Views/Shared/_Layout.cshtml
@@ -43,9 +43,11 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/ValidaCPF.js"></script>
+    <script src="~/js/Calcular.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    @RenderSection("ScriptCode", required: false)
+    
 
 </body>
 </html>
