--- a/Estacionamento MVC/Views/Propietarios/Create.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-3">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <label asp-for="Modelo" class="control-label"></label>
                 <input asp-for="Modelo" class="form-control" />
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" />
+                <input asp-for="CPF" id="CPF" class="form-control"/>
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -74,7 +74,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input id="Cad" type="submit" value="Cadastrar" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -83,7 +83,6 @@
 <div>
     <a class="btn btn-outline-primary" asp-action="Index">Voltar a lista</a>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
