--- a/Estacionamento MVC/Views/Propietarios/Edit.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Edit.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" />
+                <input asp-for="CPF" id="CPFedit" class="form-control" onblur="" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -77,19 +77,7 @@
                 <input id="Salvar" type="submit" value="Savar" class="btn btn-primary" />
             </div>
 
-            @section ScriptCode { 
-                <script>
-                    $('#Salvar').click(function () {
-                        let ent = parseFloat(document.getElementById('Entrada').value)
-                        let sai = parseFloat(document.getElementById('Saida').value)
-                        let soma = ent + sai;
-                        let total = soma * 5 - 100
-                        alert("Caso o cliente fique ao todo 01:40:00 no estacionamento, cobrar valor de mais uma hora.")
-                        alert("O valor total do tempo em que o cliente utilizou o estacionamento ficou R$" + total+",00");
-                                      
-                    });
-                </script>
-            }
+
 
         </form>
     </div>
