--- a/Estacionamento MVC/Views/Propietarios/Edit.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Edit.cshtml
@@ -15,42 +15,42 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Modelo" class="control-label"></label>
-                <input asp-for="Modelo" class="form-control" />
+                <input asp-for="Modelo" class="form-control" id="Modelo" />
                 <span asp-validation-for="Modelo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Cor" class="control-label"></label>
-                <input asp-for="Cor" class="form-control" />
+                <input asp-for="Cor" class="form-control" id="Cor" />
                 <span asp-validation-for="Cor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Marca" class="control-label"></label>
-                <input asp-for="Marca" class="form-control" />
+                <input asp-for="Marca" class="form-control" id="Marca" />
                 <span asp-validation-for="Marca" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Placa" class="control-label"></label>
-                <input asp-for="Placa" class="form-control" />
+                <input asp-for="Placa" class="form-control" id="Placa" />
                 <span asp-validation-for="Placa" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NomePessoa" class="control-label"></label>
-                <input asp-for="NomePessoa" class="form-control" />
+                <input asp-for="NomePessoa" class="form-control" id="Nome" />
                 <span asp-validation-for="NomePessoa" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" id="CPFedit" class="form-control" onblur="" />
+                <input asp-for="CPF" id="CPFedit" class="form-control" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NumVaga" class="control-label"></label>
-                <input asp-for="NumVaga" class="form-control" />
+                <input asp-for="NumVaga" class="form-control" id="Num_Vaga" />
                 <span asp-validation-for="NumVaga" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Data" class="control-label"></label>
-                <input asp-for="Data" class="form-control" />
+                <input asp-for="Data" class="form-control" id="Data" />
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -65,7 +65,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
+                <input asp-for="Total" class="form-control" id="Total" />
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -74,11 +74,11 @@
                 </label>
             </div>
             <div class="form-group">
-                <input id="Salvar" type="submit" value="Savar" class="btn btn-primary" />
+                <input id="Calc" type="button" value="Calcular" class="btn btn-success" />
             </div>
-
-
-
+            <div class="form-group">
+                <input id="Salvar" type="submit" value="Salvar" class="btn btn-primary" />
+            </div>
         </form>
     </div>
 </div>
