--- a/Estacionamento MVC/Views/Propietarios/Delete.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Deletar</h1>
+<h1 class="text-white">Deletar</h1>
 
-<h3>Deseja deletar mesmo este itens da lista ?</h3>
+<h3 class="text-white">Deseja deletar mesmo este itens da lista ?</h3>
 <div>
-    <h4>Propietario</h4>
+    <h4 class="text-white">Propietario</h4>
     <hr />
     <dl class="row">
         
