--- a/Estacionamento MVC/Views/Propietarios/Create.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="text-white">Create</h1>
 
-<h4>Propietario</h4>
+<h4 class="text-white">Propietario</h4>
 <hr />
 <div class="row">
     <div class="col-md-3">
