--- a/Estacionamento MVC/Views/Propietarios/Details.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalhes</h1>
+<h1 class="text-white">Detalhes</h1>
 
 <div>
-    <h4>Propietario</h4>
+    <h4 class="text-white">Propietario</h4>
     <hr />
     <dl class="row">
       
