--- a/Estacionamento MVC/Views/Propietarios/Edit.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1 class="text-white">Editar</h1>
 
-<h4>Propietario</h4>
+<h4 class="text-white">Propietario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" id="CPFedit" class="form-control" />
+                <input asp-for="CPF" id="CPFedit" class="form-control"  />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -77,7 +77,7 @@
                 <input id="Calc" type="button" value="Calcular" class="btn btn-success" />
             </div>
             <div class="form-group">
-                <input id="Salvar" type="submit" value="Salvar" class="btn btn-primary" />
+                <input id="Salvar" type="submit" value="Salvar" class="btn btn-primary" onclick="VerificaCPF()" />
             </div>
         </form>
     </div>
