--- a/Estacionamento MVC/Views/Home/Index.cshtml
+++ b/Estacionamento MVC/Views/Home/Index.cshtml
@@ -38,11 +38,11 @@
         </div>
     </div>
        
-    <div class="card bg-transparent  text-white">
+    <div class="CARD card bg-transparent  text-white">
         <div class="card-img-overlay">
             <h5 class="card-title">Furtos em nossa região</h5>
             <p class="card-text">Sabia que na nossa região registrou 29,0% de casos de veículos furtados? isso equivale 129 mil furtos de veículos</p>
-            <p class="card-text">Muita coisa né ? não corra esse risco conte com a gente! deixe seu veiculo estacionado em seguança aqui no nosso pátio.</p>
+            <p class="card-text2">Muita coisa né ? não corra esse risco conte com a gente! deixe seu veiculo estacionado em seguança aqui no nosso pátio.</p>
         </div>
     </div>
 </div>
