--- a/Estacionamento MVC/Views/Propietarios/Index.cshtml
+++ b/Estacionamento MVC/Views/Propietarios/Index.cshtml
@@ -20,7 +20,7 @@
         <input class="btn btn-success" type="submit" value="Procurar" />
     </p>
 </form>
-<table class="table">
+<table class="table-responsive">
     <thead>
         <tr>
            
